Add Profile Metadata , Update Rest of the files

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1723,5 +1723,9 @@
 		<members>*</members>
 		<name>PermissionSet</name>
 	</types>
+	<types>
+		<members>*</members>
+		<name>Profile</name>
+	</types>
 	<version>58.0</version>
 </Package>
